--- a/ultralytics/cfg/models/v8/butterfly_mix.yaml
+++ b/ultralytics/cfg/models/v8/butterfly_mix.yaml
@@ -19,22 +19,22 @@ backbone:
 # Neck + Head (Standard FPN)
 # ----------------------
 head :
-  # ===== Right Stem =====
+    # -- Step 1: Feature adaptors with better attention --
+  - [3, 1, Conv, [128, 1, 1]]     #11: P3
+  - [-1, 1, TripletAttention, [128]]  #12: More advanced than SE/CBAM
+  - [7, 1, Conv, [128, 1, 1]]     #13: P4
+  - [-1, 1, TripletAttention, [128]] #14
+  - [10, 1, Conv, [128, 1, 1]]     #15: P5
+  - [-1, 1, TripletAttention, [128]]  #16
   
-  - [10, 1, nn.Upsample, [None, 4, "nearest"]]      # 11: upsample 40x40
-  - [[11, 7], 1, Concat, [1]]                     # 12: concat
-  - [12, 1, nn.Upsample, [None, 4, "nearest"]]     # 13: upsample 160x160
-  - [[3, 13], 1, Concat, [1]]                     # 14: concat
-  - [14, 1, Conv, [256, 3, 1]]                    # 15: conv 1x1  P3
+  # -- Step 2: Top-down fusion --
+  - [16, 1, nn.Upsample, [None, 2, "nearest"]] #17
+  - [[-1, 14], 1, GatedFusion, [128]]      #18: modulated fusion
+  - [-1, 1, Conv, [128, 3, 1]]  #19
+  
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]]  #20
+  - [[-1, 12], 1, GatedFusion, [128]]  #21
+  - [-1, 1, Conv, [128, 3, 1]]  #22
 
-    # ===== Left Stem ====
-  - [14, 1, DWSConv, [256, 3, 2]]                  # 16: 160 -> 80, 256
-  - [-1, 1, DWSConv, [256, 3, 2]]                  #17 : 40x40, 256
-  - [[17, 7], 1, Concat, [1]]                      # 18: concat , 40x40x512
-  - [18, 1, DWSConv, [512, 3, 2]]                  # 19: 40 -> 20, 512
-  - [-1, 1, DWSConv, [256, 3, 2]]                  #20 : 10x10, 256
-  - [[20, 10], 1, Concat, [1]]                     # 21: concat , 20x20x1024
-  - [21, 1, Conv, [512, 3, 1]]                     # 22: conv 1x1  
- 
-  # ===== Detect Layer =====
-  - [[22, 18, 15], 1, Detect, [nc]]    # 22: Final detect
+  - [[22, 19, 16], 1, Detect, [nc]] #23
+
