--- a/ultralytics/cfg/models/v8/butterfly_mix.yaml
+++ b/ultralytics/cfg/models/v8/butterfly_mix.yaml
@@ -28,12 +28,12 @@ head :
   - [15, 1, TripletAttention, [128]]  #16
   
   # Step 2: Top-down fusion
-  - [16, 1, nn.Upsample, [None, 4, "nearest"]]         #17
-  - [[17, 14], 1, GatedFusion, [128]]                 #18 ← DIRECT
-  - [18, 1, Conv, [128, 3, 1]]                         #19
+  - [16, 1, nn.Upsample, [None, 4, "nearest"]]     # 17
+  - [[17, 14], 1, GatedFusion, [128]]              # 18
+  - [18, 1, Conv, [128, 3, 1]]                     # 19
   
-  - [19, 1, nn.Upsample, [None, 4, "nearest"]]         #20
-  - [[20, 12], 1, GatedFusion, [128]]                 #21 ← DIRECT
-  - [21, 1, Conv, [128, 3, 1]]                         #22
+  - [19, 1, nn.Upsample, [None, 4, "nearest"]]     # 20
+  - [[20, 12], 1, GatedFusion, [128]]              # 21
+  - [21, 1, Conv, [128, 3, 1]]                     # 22
   
-  - [[22, 19, 16], 1, Detect, [nc]]                    #23
+  - [[22, 19, 16], 1, Detect, [nc]]                # 23
