--- a/ultralytics/cfg/models/v8/butterfly_bifpn_crossatt.yaml
+++ b/ultralytics/cfg/models/v8/butterfly_bifpn_crossatt.yaml
@@ -20,22 +20,21 @@ backbone:
 # ----------------------
 head :
   # Top-down Path
-  - [10, 1, Conv, [256, 1, 1]]                          # 11
-  - [11, 1, nn.Upsample, [None, 4, "nearest"]]          # 12
-  - [[12, 7], 1, CrossAttentionFuse, [256]]             # 13
-  - [13, 1, nn.Upsample, [None, 2, "nearest"]]          # 14
-  - [14, 1, Conv, [64, 1, 1]]                           # 15
-  - [[15, 3], 1, CrossAttentionFuse, [64]]              # 16
+  - [10, 1, Conv, [512, 1, 1]]         # 11: P2_left
+  - [11, 1, Conv, [256, 1, 1]]         # 12: P2_left
+
+  - [12, 1, nn.Upsample, [None, 4, "nearest"]]          # 13, 40x40x256
+  - [[13, 17], 1, CrossAttentionFuse, [256]]             # 14, 40x40x256
+  - [14, 1, nn.Upsample, [None, 4, "nearest"]]          # 15, 160x160x256
+  - [15, 1, Conv, [64, 1, 1]]                           # 16, 160x160x64
+  - [[16, 3], 1, CrossAttentionFuse, [64]]              # 17, 160x160x64
   
   # Bottom-up Path
-  - [16, 1, Conv, [128, 3, 2]]                          # 17
-  - [17, 1, Conv, [256, 1, 1]]                          # 18
-  - [[18, 13], 1, CrossAttentionFuse, [256]]            # 19
-  - [19, 1, Conv, [512, 3, 2]]                          # 20
-  - [[20, 11], 1, CrossAttentionFuse, [512]]            # 21
+  - [17, 1, DWSConv, [128, 3, 2]]                       # 18, 80x80x128
+  - [18, 1, DWSConv, [256, 3, 2]]                       # 19, 40x40x256
+  - [[19, 14], 1, CrossAttentionFuse, [256]]           # 20, 40x40x256
+  - [20, 1, DWSConv, [512, 3, 2]]                        # 21, 20x20x512
+  - [21, 1, DWSConv, [512, 1, 1]]                        # 22, 10x10x512
+  - [[22, 11], 1, CrossAttentionFuse, [512]]            # 23, 10x10x512
   
-  # Detection heads
-  - [16, 1, Conv, [128, 1, 1]]                          # 22
-  - [19, 1, Conv, [256, 1, 1]]                          # 23
-  - [21, 1, Conv, [512, 1, 1]]                          # 24
-  - [[22, 23, 24], 1, Detect, [nc]]                     # 25
+  - [[23, 20, 17], 1, Detect, [nc]]                     # 25
