--- a/ultralytics/cfg/models/v8/butterfly_bifpn_crossatt.yaml
+++ b/ultralytics/cfg/models/v8/butterfly_bifpn_crossatt.yaml
@@ -34,7 +34,7 @@ head :
   - [18, 1, DWSConv, [256, 3, 2]]                       # 19, 40x40x256
   - [[19, 14], 1, CrossAttentionFuse, [256]]           # 20, 40x40x256
   - [20, 1, DWSConv, [512, 3, 2]]                        # 21, 20x20x512
-  - [21, 1, conv, [512, 1, 1]]                        # 22, 10x10x512
+  - [21, 1, Conv, [512, 1, 1]]                        # 22, 10x10x512
   - [[22, 11], 1, CrossAttentionFuse, [512]]            # 23, 10x10x512
   
   - [[23, 20, 17], 1, Detect, [nc]]                     # 25
