--- a/ultralytics/cfg/models/v8/test.yaml
+++ b/ultralytics/cfg/models/v8/test.yaml
@@ -2,68 +2,68 @@
 
 # Parameters
 nc: 3  # number of classes: RBC, WBC, Platelets
+
 backbone:
-  - [-1, 1, DWSConv, [32, 3, 2]]        # 0: stem (640 -> 320) , 32
-  - [-1, 1, DWSConv, [64, 3, 2]]        # 1: 320 -> 160 , 64
-  - [-1, 1, DenseBlock, [64, 3, 16]]    # 2: 160 -> 160 , 64
-  - [-1, 1, CBAM, [64]]                 # 3: 160 -> 160, 64, C3
-  - [-1, 1, DWSConv, [128, 3, 2]]       # 4: 160 -> 80, 128
-  - [-1, 1, DWSConv, [256, 3, 2]]      # 5: 80 -> 40, 256
-  - [-1, 1, DenseBlock, [256, 4, 24]]   # 6: 40 -> 40 , 256
-  - [-1, 1, CBAM, [256]]                # 7: 40 -> 40, 256, C4
-  - [-1, 1, DWSConv, [512, 3, 2]]       # 8: 40 -> 20, 512
+  - [-1, 1, DWSConv, [32, 3, 2]]         # 0: stem (640 -> 320), 32
+  - [-1, 1, DWSConv, [64, 3, 2]]         # 1: 320 -> 160, 64
+  - [-1, 1, DenseBlock, [64, 3, 16]]     # 2: 160 -> 160, 64
+  - [-1, 1, CBAM, [64]]                  # 3: 160 -> 160, 64, C3
+  - [-1, 1, DWSConv, [128, 3, 2]]        # 4: 160 -> 80, 128
+  - [-1, 1, DWSConv, [256, 3, 2]]        # 5: 80 -> 40, 256
+  - [-1, 1, DenseBlock, [256, 4, 24]]    # 6: 40 -> 40, 256
+  - [-1, 1, CBAM, [256]]                 # 7: 40 -> 40, 256, C4
+  - [-1, 1, DWSConv, [512, 3, 2]]        # 8: 40 -> 20, 512
   - [-1, 1, DWSConv, [1024, 3, 2]]       # 9: 20 -> 10, 1024
-  - [-1, 1, CBAM, [1024]]               # 10: 10 -> 10, 1024, C5
+  - [-1, 1, CBAM, [1024]]                # 10: 10 -> 10, 1024, C5
 
-# Neck
-head :
-  - [3, 1, Conv, [128, 1, 1]],                   # 11: channelshaper_64
-  - [7, 1, Conv, [128, 1, 1]],                   # 12: channelshaper_256
-  - [10, 1, Conv, [128, 1, 1]],                  # 13: channelshaper_1024
+head:
+  - [3, 1, Conv, [128, 1, 1]]            # 11: channelshaper_64
+  - [7, 1, Conv, [128, 1, 1]]            # 12: channelshaper_256
+  - [10, 1, Conv, [128, 1, 1]]           # 13: channelshaper_1024
 
-  - [13, 1, nn.Upsample, [None, 2, "nearest"]],  # 14: upsample x2
-  - [12, 1, DWSConv, [128, 3, 2]],               # 15: downsample
-  - [[14, 15], 1, Concat, [1]],                  # 16
-  - [-1, 1, Conv, [128, 3, 1]],                  # 17
+  - [13, 1, nn.Upsample, [None, 2, "nearest"]]   # 14: upsample x2
+  - [12, 1, DWSConv, [128, 3, 2]]               # 15: downsample
+  - [[14, 15], 1, Concat, [1]]                  # 16
+  - [-1, 1, Conv, [128, 3, 1]]                  # 17
 
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]],  # 18
-  - [[12, 18], 1, Concat, [1]],                  # 19
-  - [-1, 1, Conv, [128, 3, 1]],                  # 20
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]]   # 18
+  - [[12, 18], 1, Concat, [1]]                  # 19
+  - [-1, 1, Conv, [128, 3, 1]]                  # 20
 
-  - [11, 1, DWSConv, [128, 3, 2]],               # 21
-  - [20, 1, nn.Upsample, [None, 2, "nearest"]],  # 22
-  - [[21, 22], 1, Concat, [1]],                  # 23
-  - [-1, 1, Conv, [128, 3, 1]],                  # 24
+  - [11, 1, DWSConv, [128, 3, 2]]               # 21
+  - [20, 1, nn.Upsample, [None, 2, "nearest"]]  # 22
+  - [[21, 22], 1, Concat, [1]]                  # 23
+  - [-1, 1, Conv, [128, 3, 1]]                  # 24
 
-    # Right stem
-  - [3, 1, Conv, [128, 1, 1]],                   # 25
-  - [7, 1, Conv, [128, 1, 1]],                   # 26
-  - [10, 1, Conv, [128, 1, 1]],                  # 27
-  - [25, 1, SE, []],                             # 28
-  - [26, 1, SE, []],                             # 29
-  - [27, 1, SE, []],                             # 30
+  # Right stem
+  - [3, 1, Conv, [128, 1, 1]]                   # 25
+  - [7, 1, Conv, [128, 1, 1]]                   # 26
+  - [10, 1, Conv, [128, 1, 1]]                  # 27
+  - [25, 1, SE, [128]]                          # 28
+  - [26, 1, SE, [128]]                          # 29
+  - [27, 1, SE, [128]]                          # 30
 
-  - [30, 1, nn.Upsample, [None, 2, "nearest"]],  # 31
-  - [29, 1, DWSConv, [128, 3, 2]],               # 32
-  - [[31, 32], 1, Concat, [1]],                  # 33
-  - [-1, 1, Conv, [128, 3, 1]],                  # 34
+  - [30, 1, nn.Upsample, [None, 2, "nearest"]]  # 31
+  - [29, 1, DWSConv, [128, 3, 2]]               # 32
+  - [[31, 32], 1, Concat, [1]]                  # 33
+  - [-1, 1, Conv, [128, 3, 1]]                  # 34
 
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]],  # 35
-  - [[26, 35], 1, Concat, [1]],                  # 36
-  - [-1, 1, Conv, [128, 3, 1]],                  # 37
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]]  # 35
+  - [[26, 35], 1, Concat, [1]]                  # 36
+  - [-1, 1, Conv, [128, 3, 1]]                  # 37
 
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]],  # 38
-  - [28, 1, DWSConv, [128, 3, 2]],               # 39
-  - [[38, 39], 1, Concat, [1]],                  # 40
-  - [-1, 1, Conv, [128, 3, 1]],                  # 41
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]]  # 38
+  - [28, 1, DWSConv, [128, 3, 2]]               # 39
+  - [[38, 39], 1, Concat, [1]]                  # 40
+  - [-1, 1, Conv, [128, 3, 1]]                  # 41
 
-  - [[17, 34], 1, Concat, [1]],                  # 42
-  - [-1, 1, Conv, [128, 3, 1]],                  # 43 → P3
+  - [[17, 34], 1, Concat, [1]]                  # 42
+  - [-1, 1, Conv, [128, 3, 1]]                  # 43 → P3
 
-  - [[20, 37], 1, Concat, [1]],                  # 44
-  - [-1, 1, Conv, [128, 3, 1]],                  # 45 → P4
+  - [[20, 37], 1, Concat, [1]]                  # 44
+  - [-1, 1, Conv, [128, 3, 1]]                  # 45 → P4
 
-  - [[24, 41], 1, Concat, [1]],                  # 46
-  - [-1, 1, Conv, [128, 3, 1]],                  # 47 → P5
+  - [[24, 41], 1, Concat, [1]]                  # 46
+  - [-1, 1, Conv, [128, 3, 1]]                  # 47 → P5
 
-  - [[43, 45, 47], 1, Detect, [nc]]    # 41: Final detect
+  - [[43, 45, 47], 1, Detect, [nc]]            # 48: Final detect
