--- a/ultralytics/cfg/models/v8/butterflyV2_dualpath_trippleatt_concat.yaml
+++ b/ultralytics/cfg/models/v8/butterflyV2_dualpath_trippleatt_concat.yaml
@@ -27,10 +27,10 @@ head :
   - [12, 1, Conv, [128, 1, 1]]          # 15: 
 
   - [15, 1, nn.Upsample, [None, 2, "nearest"]]     # 16: upsample P2_left
-  - [[16, 14], 1,  GatedFusion, [128]]             # 17: P3_left + up_P2_left
+  - [[16, 14], 1,  Concat, [1]]             # 17: P3_left + up_P2_left
   - [-1, 1, Conv, [128, 3, 1]]                     # 18: Fused_left_P3
   - [18, 1, nn.Upsample, [None, 2, "nearest"]]     # 19: upsample fused left
-  - [[19, 13], 1, GatedFusion, [128]]              # 20: P1_left + up_P3_left
+  - [[19, 13], 1, Concat, [1]]              # 20: P1_left + up_P3_left
   - [-1, 1, Conv, [128, 3, 1]]                     # 21: out_left (for head 1)
 
   # ===== Right Stem =====
@@ -39,18 +39,18 @@ head :
   - [15, 1, SE, [128]]                # 24: attension -> P2_right
 
   - [24, 1, nn.Upsample, [None, 2, "nearest"]]     # 25: upsample P2_right
-  - [[25, 23], 1,  GatedFusion, [128]]             # 26: P3_right + up_P2_right
+  - [[25, 23], 1,  Concat, [1]]             # 26: P3_right + up_P2_right
   - [-1, 1, Conv, [128, 3, 1]]                     # 27: Fused_right_P3
   - [27, 1, nn.Upsample, [None, 2, "nearest"]]     # 28: upsample fused right
-  - [[28, 22], 1,  GatedFusion, [128]]             # 29: P1_right + up_P3_right
+  - [[28, 22], 1, Concat, [1]]             # 29: P1_right + up_P3_right
   - [-1, 1, Conv, [128, 3, 1]]                     # 30: out_right (for head 1)
 
   # ===== Fusion for other heads =====
-  - [[15, 24], 1,  GatedFusion, [128]]         # 31: head_2 input (P3 fusion)
+  - [[15, 24], 1,  Concat, [1]]         # 31: head_2 input (P3 fusion)
   - [-1, 1, Conv, [128, 3, 1]]                 # 32
-  - [[18, 27], 1,  GatedFusion, [128]]         # 33: head_3 input (P2 fusion)
+  - [[18, 27], 1,  Concat, [1]]         # 33: head_3 input (P2 fusion)
   - [-1, 1, Conv, [128, 3, 1]]                 # 34
-  - [[21, 30], 1,  GatedFusion, [128]]         # 35: head_1 input (P1 fusion)
+  - [[21, 30], 1, Concat, [1]]         # 35: head_1 input (P1 fusion)
   - [-1, 1, Conv, [128, 3, 1]]                 # 36
 
   # ===== Detect Layer =====
