--- a/ultralytics/cfg/models/12/yolo12.yaml
+++ b/ultralytics/cfg/models/12/yolo12.yaml
@@ -22,10 +22,13 @@ backbone:
   - [-1, 2, C3k2, [256, False, 0.25]]
   - [-1, 1, Conv, [256, 3, 2]] # 3-P3/8
   - [-1, 2, C3k2, [512, False, 0.25]]
+  - [-1, 1, AdaptivePerChannelGamma, [512]]
   - [-1, 1, Conv, [512, 3, 2]] # 5-P4/16
   - [-1, 4, A2C2f, [512, True, 4]]
+  - [-1, 1, LearnableCLAHE, [512]] # add LearnableCLAHE (args[0]=output channels)
   - [-1, 1, Conv, [1024, 3, 2]] # 7-P5/32
   - [-1, 4, A2C2f, [1024, True, 1]] # 8
+  - [-1, 1, TrainableRetinex, [1024]] # add TrainableRetinex (args[0]=output channels)
 
 # YOLO12n head
 head:
