--- a/ultralytics/cfg/models/12/yolo12.yaml
+++ b/ultralytics/cfg/models/12/yolo12.yaml
@@ -22,30 +22,27 @@ backbone:
   - [-1, 2, C3k2, [256, False, 0.25]]
   - [-1, 1, Conv, [256, 3, 2]] # 3-P3/8
   - [-1, 2, C3k2, [512, False, 0.25]]
-  - [-1, 1, AdaptivePerChannelGamma, [512]]
   - [-1, 1, Conv, [512, 3, 2]] # 5-P4/16
   - [-1, 4, A2C2f, [512, True, 4]]
-  - [-1, 1, LearnableCLAHE, [512]] # add LearnableCLAHE (args[0]=output channels)
   - [-1, 1, Conv, [1024, 3, 2]] # 7-P5/32
   - [-1, 4, A2C2f, [1024, True, 1]] # 8
-  - [-1, 1, TrainableRetinex, [1024]] # add TrainableRetinex (args[0]=output channels)
 
 # YOLO12n head
 head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
-  - [[-1, 7], 1, Concat, [1]] # cat backbone P4 (was 6, now 7 due to added layers)
-  - [-1, 2, A2C2f, [512, False, -1]] # 14
+  - [[-1, 6], 1, Concat, [1]] # cat backbone P4
+  - [-1, 2, A2C2f, [512, False, -1]] # 11
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 4], 1, Concat, [1]] # cat backbone P3
-  - [-1, 2, A2C2f, [256, False, -1]] # 17
+  - [-1, 2, A2C2f, [256, False, -1]] # 14
 
   - [-1, 1, Conv, [256, 3, 2]]
-  - [[-1, 14], 1, Concat, [1]] # cat head P4 (was 11, now 14)
-  - [-1, 2, A2C2f, [512, False, -1]] # 20
+  - [[-1, 11], 1, Concat, [1]] # cat head P4
+  - [-1, 2, A2C2f, [512, False, -1]] # 17
 
   - [-1, 1, Conv, [512, 3, 2]]
-  - [[-1, 11], 1, Concat, [1]] # cat head P5 (was 8, now 11 - TrainableRetinex layer)
-  - [-1, 2, C3k2, [1024, True]] # 23 (P5/32-large)
+  - [[-1, 8], 1, Concat, [1]] # cat head P5
+  - [-1, 2, C3k2, [1024, True]] # 20 (P5/32-large)
 
-  - [[17, 20, 23], 1, Detect, [nc]] # Detect(P3, P4, P5)
+  - [[14, 17, 20], 1, Detect, [nc]] # Detect(P3, P4, P5)
