--- a/ultralytics/cfg/models/12/yolo12.yaml
+++ b/ultralytics/cfg/models/12/yolo12.yaml
@@ -22,7 +22,7 @@ backbone:
   - [-1, 2, C3k2, [256, False, 0.25]]
   - [-1, 1, Conv, [256, 3, 2]] # 3-P3/8
   - [-1, 2, C3k2, [512, False, 0.25]]
-  - [-1, 1, AdaptivePerChannelGamma, [512]]  # Test: Pure identity module
+  - [-1, 1, AdaptivePerChannelGamma, [128]]  # Test: True identity (128->128)
   - [-1, 1, Conv, [512, 3, 2]] # 6-P4/16
   - [-1, 4, A2C2f, [512, True, 4]]
   - [-1, 1, Conv, [1024, 3, 2]] # 7-P5/32
