--- a/ultralytics/cfg/models/12/yolo12.yaml
+++ b/ultralytics/cfg/models/12/yolo12.yaml
@@ -22,8 +22,7 @@ backbone:
   - [-1, 2, C3k2, [256, False, 0.25]]
   - [-1, 1, Conv, [256, 3, 2]] # 3-P3/8
   - [-1, 2, C3k2, [512, False, 0.25]]
-  - [-1, 1, AdaptivePerChannelGamma, [512]]  # Test: Project 128->512 (like original Conv)
-  - [-1, 1, Conv, [512, 3, 2]] # 6-P4/16
+  - [-1, 1, Conv, [512, 3, 2]] # 5-P4/16
   - [-1, 4, A2C2f, [512, True, 4]]
   - [-1, 1, Conv, [1024, 3, 2]] # 7-P5/32
   - [-1, 4, A2C2f, [1024, True, 1]] # 8
@@ -31,19 +30,19 @@ backbone:
 # YOLO12n head
 head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
-  - [[-1, 7], 1, Concat, [1]] # cat backbone P4 (was 6, now 7 due to added identity layer)
-  - [-1, 2, A2C2f, [512, False, -1]] # 12
+  - [[-1, 6], 1, Concat, [1]] # cat backbone P4
+  - [-1, 2, A2C2f, [512, False, -1]] # 11
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 4], 1, Concat, [1]] # cat backbone P3
-  - [-1, 2, A2C2f, [256, False, -1]] # 15
+  - [-1, 2, A2C2f, [256, False, -1]] # 14
 
   - [-1, 1, Conv, [256, 3, 2]]
-  - [[-1, 12], 1, Concat, [1]] # cat head P4 (was 11, now 12)
-  - [-1, 2, A2C2f, [512, False, -1]] # 18
+  - [[-1, 11], 1, Concat, [1]] # cat head P4
+  - [-1, 2, A2C2f, [512, False, -1]] # 17
 
   - [-1, 1, Conv, [512, 3, 2]]
-  - [[-1, 9], 1, Concat, [1]] # cat head P5 (was 8, now 9)
-  - [-1, 2, C3k2, [1024, True]] # 21 (P5/32-large)
+  - [[-1, 8], 1, Concat, [1]] # cat head P5
+  - [-1, 2, C3k2, [1024, True]] # 20 (P5/32-large)
 
-  - [[15, 18, 21], 1, Detect, [nc]] # Detect(P3, P4, P5) (was [14,17,20], now [15,18,21])
+  - [[14, 17, 20], 1, Detect, [nc]] # Detect(P3, P4, P5)
