Implement CSPPF (Cross-Spatial Pyramid Pooling Feature) module
Based on DarkYOLO paper specifications:

Features:
- Overlapping pooling strategy with max and average pooling
- Two parallel pathways preserve local information in low-light
- Pathway 1: Max -> Max -> Avg pooling sequence
- Pathway 2: Avg -> Avg -> Max pooling sequence
- Implements equations 4-8 from the research paper
- Smoother transitions during pooling process
- Enhanced feature diversity for complex backgrounds

Integration:
- Added to ultralytics module system (imports, exports, base_modules)
- Updated darkyolov8.yaml to use CSPPF instead of SPPF
- Full YAML parser compatibility with c1, c2 handling
- Replaces standard SPPF for better low-light feature extraction

This addresses severe loss of local information in low-light images
by combining max pooling (prominent edges) with average pooling
(global brightness gradient).

--- a/ultralytics/cfg/models/v8/darkyolov8.yaml
+++ b/ultralytics/cfg/models/v8/darkyolov8.yaml
@@ -28,7 +28,7 @@ backbone:
   - [-1, 6, PSMBlock, [512]]    # 6 - PSM instead of C2f
   - [-1, 1, Conv, [1024, 3, 2]] # 7-P5/32
   - [-1, 3, PSMBlock, [1024]]   # 8 - PSM instead of C2f
-  - [-1, 1, SPPF, [1024, 5]]    # 9
+  - [-1, 1, CSPPF, [1024, 5]]   # 9 - CSPPF instead of SPPF for low-light
 
 # DarkYOLOv8.0n head with original C2f blocks
 head:
