--- a/ultralytics/cfg/models/v8/darkyolov8.yaml
+++ b/ultralytics/cfg/models/v8/darkyolov8.yaml
@@ -30,22 +30,26 @@ backbone:
   - [-1, 3, PSMBlock, [1024]]   # 8 - PSM instead of C2f
   - [-1, 1, CSPPF, [1024, 5]]   # 9 - CSPPF instead of SPPF for low-light
 
-# DarkYOLOv8.0n head with original C2f blocks
+# DarkYOLOv8.0n head with D-RAMiT attention in neck
 head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 6], 1, Concat, [1]]   # cat backbone P4
-  - [-1, 3, C2f, [512]]         # 12 - Keep original C2f in neck
+  - [-1, 1, DRAMiT, [512]]      # 12 - D-RAMiT attention for global context
+  - [-1, 3, C2f, [512]]         # 13 - C2f after attention
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 4], 1, Concat, [1]]   # cat backbone P3
-  - [-1, 3, C2f, [256]]         # 15 (P3/8-small) - Keep original C2f in neck
+  - [-1, 1, DRAMiT, [256]]      # 16 - D-RAMiT attention for global context
+  - [-1, 3, C2f, [256]]         # 17 (P3/8-small) - C2f after attention
 
   - [-1, 1, Conv, [256, 3, 2]]
-  - [[-1, 12], 1, Concat, [1]]  # cat head P4
-  - [-1, 3, C2f, [512]]         # 18 (P4/16-medium) - Keep original C2f in neck
+  - [[-1, 13], 1, Concat, [1]]  # cat head P4 (adjusted index)
+  - [-1, 1, DRAMiT, [512]]      # 20 - D-RAMiT attention for global context
+  - [-1, 3, C2f, [512]]         # 21 (P4/16-medium) - C2f after attention
 
   - [-1, 1, Conv, [512, 3, 2]]
   - [[-1, 9], 1, Concat, [1]]   # cat head P5
-  - [-1, 3, C2f, [1024]]        # 21 (P5/32-large) - Keep original C2f in neck
+  - [-1, 1, DRAMiT, [1024]]     # 24 - D-RAMiT attention for global context
+  - [-1, 3, C2f, [1024]]        # 25 (P5/32-large) - C2f after attention
 
-  - [[15, 18, 21], 1, Detect, [nc]] # Detect(P3, P4, P5)
+  - [[17, 21, 25], 1, Detect, [nc]] # Detect(P3, P4, P5) (adjusted indices)
