--- a/ultralytics/cfg/models/v8/darkyolov8.yaml
+++ b/ultralytics/cfg/models/v8/darkyolov8.yaml
@@ -19,6 +19,7 @@ scales: # model compound scaling constants, i.e. 'model=darkyolov8n.yaml' will c
 # DarkYOLOv8.0n backbone with PSM blocks
 backbone:
   # [from, repeats, module, args]
+  - [-1, 1, SCINet, [3, 32, 4, True]]  # 0 - SCINet enhancement module (in_ch, base_ch, stages, share_weights)
   - [-1, 1, Conv, [64, 3, 2]]   # 0-P1/2
   - [-1, 1, Conv, [128, 3, 2]]  # 1-P2/4
   - [-1, 3, PSMBlock, [128]]    # 2 - PSM instead of C2f
@@ -33,20 +34,20 @@ backbone:
 # DarkYOLOv8.0n head with original C2f blocks
 head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
-  - [[-1, 6], 1, Concat, [1]]   # cat backbone P4
+  - [[-1, 7], 1, Concat, [1]]   # cat backbone P4
   - [-1, 3, C2f, [512]]         # 12 - Keep original C2f in neck
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
-  - [[-1, 4], 1, Concat, [1]]   # cat backbone P3
+  - [[-1, 5], 1, Concat, [1]]   # cat backbone P3
   - [-1, 3, C2f, [256]]         # 15 (P3/8-small) - Keep original C2f in neck
   # - [-1, 1, DRAMiT, [256]]      # 16 - D-RAMiT attention for P3
 
   - [-1, 1, Conv, [256, 3, 2]]
-  - [[-1, 12], 1, Concat, [1]]  # cat head P4
+  - [[-1, 13], 1, Concat, [1]]  # cat head P4
   - [-1, 3, C2f, [512]]         # 19 (P4/16-medium) - Keep original C2f in neck
 
   - [-1, 1, Conv, [512, 3, 2]]
-  - [[-1, 9], 1, Concat, [1]]   # cat head P5
+  - [[-1, 10], 1, Concat, [1]]   # cat head P5
   - [-1, 3, C2f, [1024]]        # 22 (P5/32-large) - Keep original C2f in neck
 
-  - [[16, 19, 21], 1, Detect, [nc]] # Detect(P3, P4, P5) - using D-RAMiT outputs
+  - [[17, 20, 22], 1, Detect, [nc]] # Detect(P3, P4, P5) - using D-RAMiT outputs
