--- a/ultralytics/cfg/models/12/llie_yolo12.yaml
+++ b/ultralytics/cfg/models/12/llie_yolo12.yaml
@@ -20,33 +20,33 @@ scales: # model compound scaling constants, i.e. 'model=llie_yolo12n.yaml' will 
 backbone:
   # [from, repeats, module, args]
   - [-1, 1, ZeroDCE, [3]]           # 0 - Zero-DCE enhancement (preprocessing). First arg must exist for parser; 3=RGB
-  - [-1, 1, DWSConv, [64, 3, 2]]     # 0-P1/2  (replaced Conv -> DWSConv)
-  - [-1, 1, DWSConv, [128, 3, 2]]    # 1-P2/4  (replaced Conv -> DWSConv)
-  - [-1, 2, PSMBlock, [256]]         # 2 - PSMBlock instead of C3k2
-  - [-1, 1, DWSConv, [256, 3, 2]]    # 3-P3/8  (replaced Conv -> DWSConv)
-  - [-1, 2, PSMBlock, [512]]         # 4 - PSMBlock instead of C3k2
-  - [-1, 1, DWSConv, [512, 3, 2]]    # 5-P4/16 (replaced Conv -> DWSConv)
-  - [-1, 4, PSMBlock, [512]]         # 6 - PSMBlock instead of A2C2f
-  - [-1, 1, DWSConv, [1024, 3, 2]]   # 7-P5/32 (replaced Conv -> DWSConv)
-  - [-1, 4, PSMBlock, [1024]]        # 8 - PSMBlock instead of A2C2f
-  - [-1, 1, CSPPF, [1024, 5]]        # 9 - CSPPF in place of SPPF for low-light
+  - [-1, 1, DWSConv, [64, 3, 2]]     # 1 - P1/2  (replaced Conv -> DWSConv)
+  - [-1, 1, DWSConv, [128, 3, 2]]    # 2 - P2/4  (replaced Conv -> DWSConv)
+  - [-1, 2, PSMBlock, [256]]         # 3 - PSMBlock instead of C3k2
+  - [-1, 1, DWSConv, [256, 3, 2]]    # 4 - P3/8  (replaced Conv -> DWSConv)
+  - [-1, 2, PSMBlock, [512]]         # 5 - PSMBlock instead of C3k2
+  - [-1, 1, DWSConv, [512, 3, 2]]    # 6 - P4/16 (replaced Conv -> DWSConv)
+  - [-1, 4, PSMBlock, [512]]         # 7 - PSMBlock instead of A2C2f
+  - [-1, 1, DWSConv, [1024, 3, 2]]   # 8 - P5/32 (replaced Conv -> DWSConv)
+  - [-1, 4, PSMBlock, [1024]]        # 9 - PSMBlock instead of A2C2f
+  - [-1, 1, CSPPF, [1024, 5]]        # 10 - CSPPF in place of SPPF for low-light
 
 # LLIE-YOLO12 head (neck kept mostly as original, Conv blocks preserved)
 head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
-  - [[-1, 6], 1, Concat, [1]] # cat backbone P4
-  - [-1, 2, A2C2f, [512, False, -1]] # 11
+  - [[-1, 6], 1, Concat, [1]] # 12 - cat backbone P4
+  - [-1, 2, A2C2f, [512, False, -1]] # 13
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
-  - [[-1, 4], 1, Concat, [1]] # cat backbone P3
-  - [-1, 2, A2C2f, [256, False, -1]] # 14
+  - [[-1, 4], 1, Concat, [1]] # 15 - cat backbone P3
+  - [-1, 2, A2C2f, [256, False, -1]] # 16
 
   - [-1, 1, Conv, [256, 3, 2]]
-  - [[-1, 11], 1, Concat, [1]] # cat head P4
-  - [-1, 2, A2C2f, [512, False, -1]] # 17
+  - [[-1, 13], 1, Concat, [1]] # 18 - cat head P4
+  - [-1, 2, A2C2f, [512, False, -1]] # 19
 
   - [-1, 1, Conv, [512, 3, 2]]
-  - [[-1, 8], 1, Concat, [1]] # cat head P5
-  - [-1, 2, C3k2, [1024, True]] # 20 (P5/32-large)
+  - [[-1, 8], 1, Concat, [1]] # 21 - cat head P5
+  - [-1, 2, C3k2, [1024, True]] # 22 (P5/32-large)
 
-  - [[14, 17, 20], 1, Detect, [nc]] # Detect(P3, P4, P5)
+  - [[16, 19, 22], 1, Detect, [nc]] # 23 - Detect(P3, P4, P5)
